# WorkAgent

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: graph.py
app/api/: deps.py
app/api/routes/: agent.py  documents.py
app/core/: config.py  logger.py
app/rag/: embeddings.py  loader.py  vectorstore.py
